--- a/PCompus_app/pom.xml
+++ b/PCompus_app/pom.xml
@@ -287,6 +287,12 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jsonfile</artifactId>
+            <version>1.1.1</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
