--- a/PCompus_controller/pom.xml
+++ b/PCompus_controller/pom.xml
@@ -5,6 +5,18 @@
 
 
     <name>PCompus_controller</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <!--定义该工程的父工程-->
     <parent>
@@ -63,6 +75,12 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jsonfile</artifactId>
+            <version>1.1.1</version>
+            <scope>compile</scope>
         </dependency>
 
 
