--- a/PCompus_mapper/pom.xml
+++ b/PCompus_mapper/pom.xml
@@ -43,6 +43,12 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jsonfile</artifactId>
+            <version>1.1.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
