--- a/PCompus_pojo/pom.xml
+++ b/PCompus_pojo/pom.xml
@@ -35,6 +35,12 @@
             <artifactId>jackson-annotations</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jsonfile</artifactId>
+            <version>1.1.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
