--- a/PCompus_service/pom.xml
+++ b/PCompus_service/pom.xml
@@ -66,6 +66,12 @@
             <version>1.0-SNAPSHOT</version>
             <!--<scope>compile</scope>-->
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jsonfile</artifactId>
+            <version>1.1.1</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
